--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.4.4",
     "axios": "^0.21.1",
     "babel-loader": "^8.0.0-beta.4",
+    "bootstrap": "^4.6.0",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -22,6 +23,7 @@
     "postcss-flexibility": "^2.0.0",
     "postcss-loader": "^3.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
