--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "justforyouclient",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
-  "homepage": "http://localhost/build/",
   "dependencies": {
     "@babel/core": "^7.0.0-rc.1",
     "@babel/plugin-proposal-decorators": "^7.2.3",
