--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.0.0-beta.4",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.0",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -28,10 +29,12 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.23.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.2",
