--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.0.0-beta.4",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
+    "chart.js": "^2.9.4",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -28,6 +29,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
